[tool.poetry]
name = "random-status-code"
version = "0.1.0"
description = ""
authors = ["carvalhocaio <caiocarvalho.py@gmail.com>"]
readme = "README.md"
packages = [{include = "random_status_code"}]

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
